--- a/_sass/uswds/src/settings/_settings-components.scss
+++ b/_sass/uswds/src/settings/_settings-components.scss
@@ -66,7 +66,7 @@ $theme-card-padding-y: 2 !default;
 
 // Footer
 $theme-footer-font-family: "body" !default;
-$theme-footer-max-width: "desktop" !default;
+$theme-footer-max-width: "widescreen" !default;
 
 // Form and input
 $theme-checkbox-border-radius: "sm" !default;
@@ -80,7 +80,7 @@ $theme-input-state-border-width: 0.5 !default;
 // Header
 $theme-header-font-family: "ui" !default;
 $theme-header-logo-text-width: 33% !default;
-$theme-header-max-width: "desktop" !default;
+$theme-header-max-width: "widescreen" !default;
 $theme-header-min-width: "desktop" !default;
 
 // Hero
