added homepage content -- and draft layout.

--- a/_includes/snippets/topics.html
+++ b/_includes/snippets/topics.html
@@ -1,14 +1,14 @@
 <div class="home-current-topic">
 <h2>Current Topics</h2>
 <ul class="usa-card-group">
-  <li class="tablet:grid-col-4 usa-card">
+  <li class="tablet:grid-col-6 usa-card usa-card--flag">
     <div class="usa-card__container">
       <header class="usa-card__header">
-        <h2 class="usa-card__heading">Saving Lives Through Increased Support for Mental and Behavioral Health Needs Report</h2>
+        <h4>Saving Lives Through Increased Support for Mental and Behavioral Health Needs Report</h4>
       </header>
       <div class="usa-card__media">
         <div class="usa-card__img">
-          <img src="https://via.placeholder.com/350x150" alt="A placeholder image">
+          <img src="https://via.placeholder.com/350x150?text=image" alt="A placeholder image">
         </div>
       </div>
       <div class="usa-card__footer">
@@ -16,14 +16,14 @@
       </div>
     </div>
   </li>
-  <li class="tablet:grid-col-4 usa-card">
+  <li class="tablet:grid-col-6 usa-card usa-card--flag">
     <div class="usa-card__container">
       <header class="usa-card__header">
-        <h2 class="usa-card__heading">SAMHSA releases preliminary report on the Drug Abuse Warning Network</h2>
+        <h4>SAMHSA releases preliminary report on the Drug Abuse Warning Network</h4>
       </header>
       <div class="usa-card__media">
         <div class="usa-card__img">
-          <img src="https://designsystem.digital.gov/img/introducing-uswds-2-0/built-to-grow--alt.jpg" alt="A placeholder image">
+          <img src="https://via.placeholder.com/350x150?text=image" alt="A placeholder image">
         </div>
       </div>
       <div class="usa-card__footer">
@@ -31,14 +31,14 @@
       </div>
     </div>
   </li>
-  <li class="tablet:grid-col-4 usa-card">
+  <li class="tablet:grid-col-6 usa-card usa-card--flag">
     <div class="usa-card__container">
       <header class="usa-card__header">
-        <h2 class="usa-card__heading">Addressing Mental Health, Homelessness, and Addiction Report</h2>
+        <h4>Addressing Mental Health, Homelessness, and Addiction Report</h4>
       </header>
       <div class="usa-card__media">
         <div class="usa-card__img">
-          <img src="https://designsystem.digital.gov/img/introducing-uswds-2-0/built-to-grow--alt.jpg" alt="A placeholder image">
+          <img src="https://via.placeholder.com/350x150?text=image" alt="A placeholder image">
         </div>
       </div>
       <div class="usa-card__footer">
@@ -46,14 +46,14 @@
       </div>
     </div>
   </li>
-  <li class="tablet:grid-col-4 usa-card">
+  <li class="tablet:grid-col-6 usa-card usa-card--flag">
     <div class="usa-card__container">
       <header class="usa-card__header">
-        <h2 class="usa-card__heading">SAMHSA releases report on behavioral health workforce needs</h2>
+        <h4>SAMHSA releases report on behavioral health workforce needs</h4>
       </header>
       <div class="usa-card__media">
         <div class="usa-card__img">
-          <img src="https://designsystem.digital.gov/img/introducing-uswds-2-0/built-to-grow--alt.jpg" alt="A placeholder image">
+          <img src="https://via.placeholder.com/350x150?text=image" alt="A placeholder image">
         </div>
       </div>
       <div class="usa-card__footer">
@@ -61,14 +61,14 @@
       </div>
     </div>
   </li>
-  <li class="tablet:grid-col-4 usa-card">
+  <li class="tablet:grid-col-6 usa-card usa-card--flag">
     <div class="usa-card__container">
       <header class="usa-card__header">
-        <h2 class="usa-card__heading">New publication available: "Crisis Services: Meeting Needs, Saving Lives"</h2>
+        <h4>New publication available: "Crisis Services: Meeting Needs, Saving Lives"</h4>
       </header>
       <div class="usa-card__media">
         <div class="usa-card__img">
-          <img src="https://designsystem.digital.gov/img/introducing-uswds-2-0/built-to-grow--alt.jpg" alt="A placeholder image">
+          <img src="https://via.placeholder.com/350x150?text=image" alt="A placeholder image">
         </div>
       </div>
       <div class="usa-card__footer">
@@ -76,14 +76,14 @@
       </div>
     </div>
   </li>
-  <li class="tablet:grid-col-4 usa-card">
+  <li class="tablet:grid-col-6 usa-card usa-card--flag">
     <div class="usa-card__container">
       <header class="usa-card__header">
-        <h2 class="usa-card__heading">SOR program demonstrates positive results for patients served</h2>
+        <h4>SOR program demonstrates positive results for patients served</h4>
       </header>
       <div class="usa-card__media">
         <div class="usa-card__img">
-          <img src="https://designsystem.digital.gov/img/introducing-uswds-2-0/built-to-grow--alt.jpg" alt="A placeholder image">
+          <img src="https://via.placeholder.com/350x150?text=image" alt="A placeholder image">
         </div>
       </div>
       <div class="usa-card__footer">
