--- a/_sass/_uswds-theme-custom-styles.scss
+++ b/_sass/_uswds-theme-custom-styles.scss
@@ -12,3 +12,15 @@
 .usa-navbar {
     height: 3.5rem;
 }
+
+.home-glance .usa-collection li {
+    list-style: none;
+}
+.home-glance .usa-collection ul {
+    margin-left: 0;
+    padding-left: 0;
+}
+
+.home-glance .usa-collection .usa-collection__item{
+    border-top: 1px solid ;
+}
