--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -3,7 +3,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
 <title>{% if page.title %}{{ page.title | strip_html }} | {% endif %}{{ site.title }}</title>
-
+<script src="https://kit.fontawesome.com/820c48f973.js" crossorigin="anonymous"></script>
 {% assign description = page.description | default: site.description %}
 {% if description %}
 <meta name="description" content="{{ description }}">
