--- a/_includes/snippets/offices.html
+++ b/_includes/snippets/offices.html
@@ -1,57 +1,57 @@
-<div class="home-glance">
+<div class="home-offices">
 <h2>Our Offices and Centers</h2>
-<ul class="usa-collection usa-collection--condensed">
-    <li class="usa-collection__item">
-        <div class="usa-collection__body">
-            <h3 class="usa-collection__heading"><a class="usa-link" href="">Office of the Assistant Secretary (OAS)</a></h3>
+<ul>
+    <li>
+        <div >
+            <h3><a class="usa-link" href="">Office of the Assistant Secretary (OAS)</a></h3>
             <p>OAS reports to the Secretary of the Department of Health and Human Services and is responsible for managing and directing SAMHSA.</p>
         </div>
     </li>
-    <li class="usa-collection__item">
-        <div class="usa-collection__body">
-            <h3 class="usa-collection__heading"><a class="usa-link" href="">Center for Mental Health Services (CMHS)</a></h3>
+    <li>
+        <div>
+            <h3><a class="usa-link" href="">Center for Mental Health Services (CMHS)</a></h3>
             <p>CMHS leads federal efforts to promote the prevention and treatment of mental disorders.</p>
         </div>
     </li>
-    <li class="usa-collection__item">
-        <div class="usa-collection__body">
-            <h3 class="usa-collection__heading"><a class="usa-link" href="">National Mental Health Substance Use and Policy Laboratory (NMHSUPL)</a></h3>
+    <li>
+        <div>
+            <h3><a class="usa-link" href="">National Mental Health Substance Use and Policy Laboratory (NMHSUPL)</a></h3>
             <p>Promotes evidence-based practices and service delivery models.</p>
         </div>
     </li>
-    <li class="usa-collection__item">
-        <div class="usa-collection__body">
-            <h3 class="usa-collection__heading"><a class="usa-link" href="">Center for Substance Abuse Prevention (CSAP)</a></h3>
+    <li>
+        <div>
+            <h3><a class="usa-link" href="">Center for Substance Abuse Prevention (CSAP)</a></h3>
             <p>The mission of CSAP is to improve behavioral health through evidence-based prevention approaches.</p>
         </div>
     </li>
-    <li class="usa-collection__item">
-        <div class="usa-collection__body">
-            <h3 class="usa-collection__heading"><a class="usa-link" href="">Office of Financial Resources (OFR)</a></h3>
+    <li >
+        <div>
+            <h3><a class="usa-link" href="">Office of Financial Resources (OFR)</a></h3>
             <p>OFR develops and implements the policies and programs of the Assistant Secretary.</p>
         </div>
     </li>
-    <li class="usa-collection__item">
-        <div class="usa-collection__body">
-            <h3 class="usa-collection__heading"><a class="usa-link" href="">Center for Substance Abuse Treatment (CSAT)</a></h3>
+    <li>
+        <div>
+            <h3><a class="usa-link" href="">Center for Substance Abuse Treatment (CSAT)</a></h3>
             <p>CSAT promotes community-based substance abuse treatment and recovery services for individuals and families in every community.</p>
         </div>
     </li>
-    <li class="usa-collection__item">
-        <div class="usa-collection__body">
-            <h3 class="usa-collection__heading"><a class="usa-link" href="">Office of Management, Technology, and Operations (OMTO)</a></h3>
+    <li>
+        <div>
+            <h3><a class="usa-link" href="">Office of Management, Technology, and Operations (OMTO)</a></h3>
             <p>OMTO oversees and supports SAMHSA needs.</p>
         </div>
     </li>
-    <li class="usa-collection__item">
-        <div class="usa-collection__body">
-            <h3 class="usa-collection__heading"><a class="usa-link" href="">Center for Behavioral Health Statistics and Quality (CBHSQ)</a></h3>
+    <li>
+        <div>
+            <h3><a class="usa-link" href="">Center for Behavioral Health Statistics and Quality (CBHSQ)</a></h3>
             <p>CBHSQ is the government’s lead agency for behavioral health statistics, as designated by the Office of Management and Budget.</p>
         </div>
     </li>
-    <li class="usa-collection__item">
-        <div class="usa-collection__body">
-            <h3 class="usa-collection__heading"><a class="usa-link" href="">Office of Communications (OC)</a></h3>
+    <li>
+        <div>
+            <h3><a class="usa-link" href="">Office of Communications (OC)</a></h3>
             <p>OC is SAMHSA's voice and face to the public.</p>
         </div>
     </li>
