--- a/_sass/_uswds-theme-custom-styles.scss
+++ b/_sass/_uswds-theme-custom-styles.scss
@@ -14,10 +14,12 @@
 }
 
 .home-glance {
+    margin-top: 50px;
     margin-right: 10px;
 }
 
 .home-offices {
+    margin-top: 50px;
     margin-left: 10px;
 }
 
